// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.example.eventsourcedentity.domain;

import "akkaserverless/annotations.proto";

option java_multiple_files = true;
// no java_outer_classname option, will default to "SomeEventSourcedEntityDomain"

option (akkaserverless.file).event_sourced_entity = {
    name: "SomeEventSourcedEntity"
    entity_type: "some-event-sourced-entity"
    state: "SomeEventSourcedEntityState"
    events: ["SomeEvent"]
};

message SomeEventSourcedEntityState {
  string some_field = 1;
}

message SomeEvent {
  string some_field = 1;
}
